Doc update until experiences.

--- a/main/index.html
+++ b/main/index.html
@@ -39,56 +39,53 @@
             <article id="skills" class="standard-section">
                 <div class="section-content">
                     <h2>Skills</h2>
-                    <div class="two-cols">
-                        <img id="skill-dec" src="images/skill-dec.png" alt="dummy"/>
-                        <div class="skill-list">
-                            <article class="skill-card">
-                                <img src="images/deep-learning.png" alt=""/>
-                                <div class="skill-content">
-                                    <h3>Machine Learning</h3>
-                                    <p>I have 3 years of experience on computer vision such as Medical Imaging,
-                                        License Plate Recognition, Documents OCR, Basic Classification Problems.
-                                        This also includes Regression Problems, Decision Trees, Future Prediction,
-                                        Face Detection, Human-Pose Recognition etc.</p>
-                                </div>
-                                </article>
-                            <article class="skill-card">
-                                <img src="images/web-development.png" alt=""/>
-                                <div class="skill-content">
-                                    <h3>Web development</h3>
-                                    <p>My project towards Web Development are built on React As a front-end frameworks, 
-                                        Node.JS as a backend which mostly use Firebase as a Non-SQL Database and 
-                                        Web Hosting, Supabase as a SQL database, and Rest API as a connector between 
-                                        front and back. I just started since 2022 and I am eagerly learning new aspect 
-                                        upon this field.</p>
-                                </div>
-                            </article>
-                            <article class="skill-card">
-                                <img src="images/analytics.png" alt=""/>
-                                <div class="skill-content">
-                                    <h3>Data Analytics</h3>
-                                    <p>As next year, I am graduated from B.Sc. Data Science, I have lots of classwork for 
-                                        data analytics from variety of datasets.</p>
-                                </div>
-                            </article>
-                            <article class="skill-card">
-                                <img src="images/code.png" alt=""/>
-                                <div class="skill-content">
-                                    <h3>Programming</h3>
-                                    <p>I have been coding in Python, Javascript for two years in several projects 
-                                        including Machine Learning and Web Development; also, some experience 
-                                        towards C++ and Java in class work.</p>
-                                </div>
-                            </article>
-                        </div>
+                    <img id="skill-dec" src="images/skill-dec.png" alt="dummy"/>
+                    <div id="skill-list">
+                        <article class="skill-card">
+                            <img src="images/deep-learning.png" alt=""/>
+                            <div>
+                                <h3>Machine Learning</h3>
+                                <p>I have 3 years of experience on computer vision such as Medical Imaging,
+                                    License Plate Recognition, Documents OCR, Basic Classification Problems.
+                                    This also includes Regression Problems, Decision Trees, Future Prediction,
+                                    Face Detection, Human-Pose Recognition etc.</p>
+                            </div>
+                        </article>
+                        <article class="skill-card">
+                            <img src="images/web-development.png" alt=""/>
+                            <div>
+                                <h3>Web development</h3>
+                                <p>My project towards Web Development are built on React As a front-end frameworks, 
+                                    Node.JS as a backend which mostly use Firebase as a Non-SQL Database and 
+                                    Web Hosting, Supabase as a SQL database, and Rest API as a connector between 
+                                    front and back. I just started since 2022 and I am eagerly learning new aspect 
+                                    upon this field.</p>
+                            </div>
+                        </article>
+                        <article class="skill-card">
+                            <img src="images/analytics.png" alt=""/>
+                            <div>
+                                <h3>Data Analytics</h3>
+                                <p>As next year, I am graduated from B.Sc. Data Science, I have lots of classwork for 
+                                    data analytics from variety of datasets.</p>
+                            </div>
+                        </article>
+                        <article class="skill-card">
+                            <img src="images/code.png" alt=""/>
+                            <div>
+                                <h3>Programming</h3>
+                                <p>I have been coding in Python, Javascript for two years in several projects 
+                                    including Machine Learning and Web Development; also, some experience 
+                                    towards C++ and Java in class work.</p>
+                            </div>
+                        </article>
                     </div>
                 </div>
             </article>
             <article id="research" class="standard-section section-clr-inverse">
                 <div class="section-content">
                     <h2>Research</h2>
-                    <div class="two-cols">
-                        <div class="main-content">
+                        <div>
                             <p class="title">OCTAve: 2D en face Optical Coherence Tomography Angiography Vessel Segmentation in 
                                 Weakly-Supervised Learning with Locality Augmentation</p>
                             <p>Weakly-Supervised Deep learning Models for Retinal Vessel Segmentation 
@@ -99,26 +96,23 @@
                         </div>
                         <img src="images/research.png"
                         alt="Part of the research paper showing 4 black and white pictures of vessels in the eye."/>
-                    </div>
                 </div>
             </article>
             <article id="experiences" class="standard-section">
                 <div class="section-content">
-                    <h2>Experiences</h2>
-                    <div class="two-cols">
-                        <div class="main-content">
-                            <p class="title inversed-text">machine learning engineer intern</p>
-                            <p class="inversed-text">Working as a Machine Learning Engineer and Developer in SKY ICT PCL. since 2021, 
-                                mainly creating Computer Vision Models for Security Managements, Facility Managements 
-                                such as License Plate Recognition (LPR), Document Classifier, 
-                                Document Optical Character Recognition (OCR), etc.</p>
-                            <img id="sky-logo" src="images/sky-corporation.png" alt=""/>
-                            <a class="button-filled inversed-btn white-back" href="https://www.skyict.co.th/en" target="_blank">SKY ICT PCL.</a>
-                        </div>
-                        <img src="images/car-detection.png"
-                        alt="The traffic where each car has a rectangular boarder surrounded and the label say 
-                            what the car's model is."/>
+                <h2>Experiences</h2>
+                    <div>
+                        <p class="title inversed-text">Machine Learning Engineer Intern</p>
+                        <p class="inversed-text">Working as a Machine Learning Engineer and Developer in SKY ICT PCL. since 2021, 
+                            mainly creating Computer Vision Models for Security Managements, Facility Managements 
+                            such as License Plate Recognition (LPR), Document Classifier, 
+                            Document Optical Character Recognition (OCR), etc.</p>
+                        <img id="sky-logo" src="images/sky-corporation.png" alt=""/>
+                        <a class="button-filled inversed-btn white-back" href="https://www.skyict.co.th/en" target="_blank">SKY ICT PCL.</a>
                     </div>
+                    <img src="images/car-detection.png"
+                    alt="The traffic where each car has a rectangular boarder surrounded and the label say 
+                        what the car's model is."/>
                 </div>
             </article>
             <article id="education" class="standard-section section-clr-inverse">
