--- a/main/index.html
+++ b/main/index.html
@@ -120,8 +120,8 @@
                 <section id="undergrad">
                     <div>
                         <h3 class="visually-hidden">Undergraduate</h3>
-                        <p class="edu-title">harbour. space @utcc</p>
-                        <p>b.sc. data science</p>
+                        <p class="edu-title">Habour.Space@UTCC</p>
+                        <p>B.Sc. Data Science</p>
                         <p>2nd year</p>
                         <a class="button-filled" href="https://harbour.space" target="_blank">Visit Harbour.Space Website</a>
                     </div>
@@ -129,8 +129,8 @@
                 <section id="high-sch">
                     <div>
                         <h3 class="visually-hidden">High School</h3>
-                        <p class="edu-title">kamnoetvidya science academy (kvis)</p>
-                        <p>science boarding high school</p>
+                        <p class="edu-title">Kamnoetvidya Science Academy (KVIS)</p>
+                        <p>Science Boarding High School</p>
                         <p>3y full scholarships</p>
                         <a class="button-filled" href="https://www.kvis.ac.th/Home_EN.aspx" target="_blank">Visit KVIS Website</a>
                     </div>
@@ -139,54 +139,52 @@
             <article id="achievements" class="standard-section">
                 <div class="section-content">
                     <h2>Achievements</h2>
-                    <div class="achievements-group">
-                        <article class="col-span-3">
-                            <img src="images/wizmic.png" alt="dummy"/>
-                            <main>
-                                <h3>wizmic 2014</h3>
-                                <p>In 2014, I had participated in Wizard at Mathematics International Competition 2014
-                                    (WIZMIC) between  14-22 October 2014, India. I won a Gold medal in 
-                                    Individual Contest, Champion in Team Contest, and Gold medal in Group Contest.</p>
-                            </main>
-                        </article>
-                        <article class="col-span-3">
-                            <img src="images/pmwc.png" alt="dummy"/>
-                            <main>
-                                <h3>pmwc 2015</h3>
-                                <p>Po Leung Kuk Primary Mathematics World Contest 2015 (PMWC 2015) between 
-                                    12-17 July 2015 at Hongkong, I have been selected to be one of representative 
-                                    of 12 Thai talents participating in PMWC International Mathematics Olympiad 
-                                    and got Gold medal on Individual contest with score of 14 out of 15.</p>
-                            </main>
-                        </article>
-                        <article class="col-span-2">
-                            <img src="images/itym.png" alt="dummy"/>
-                            <main>
-                                <h3>itym 2019</h3>
-                                <p>I have been selected to be part of KVIS Thai team in the 
-                                    International Tournaments of Young Mathematicians (ITYM) 2019 in Barcelona, Spain.
-                                    I got honorable mention awards with my team. </p>
-                            </main>
-                        </article>
-                        <article class="col-span-2">
-                            <img src="images/kvis-isf.png" alt="dummy"/>
-                            <main>
-                                <h3>4th kvis isf</h3>
-                                <p>During KVIS, I had 3 years to develop and create a Math or Science project 
-                                    as a graduation requirement in Grade 12. I won Best of Social Inspiration Awards 
-                                    in Environmental Science field. </p>
-                            </main>
-                        </article>
-                        <article class="col-span-2">
-                            <img src="images/cansat.png" alt="dummy"/>
-                            <main>
-                                <h3>cansat 2019</h3>
-                                <p>During Grade 10, I have an opportunity to join CANSAT Thailand 
-                                    which is a small satellites built in can-sized bottle. I made to the final round 
-                                    and became one of the ten finalists. </p>
-                            </main>
-                        </article>
-                    </div>
+                    <article class="col-span-3">
+                        <img src="images/wizmic.png" alt="dummy"/>
+                        <main>
+                            <h3>WIZMIC 2014</h3>
+                            <p>In 2014, I had participated in Wizard at Mathematics International Competition 2014
+                                (WIZMIC) between  14-22 October 2014, India. I won a Gold medal in 
+                                Individual Contest, Champion in Team Contest, and Gold medal in Group Contest.</p>
+                        </main>
+                    </article>
+                    <article class="col-span-3">
+                        <img src="images/pmwc.png" alt="dummy"/>
+                        <main>
+                            <h3>PMWC 2015</h3>
+                            <p>Po Leung Kuk Primary Mathematics World Contest 2015 (PMWC 2015) between 
+                                12-17 July 2015 at Hongkong, I have been selected to be one of representative 
+                                of 12 Thai talents participating in PMWC International Mathematics Olympiad 
+                                and got Gold medal on Individual contest with score of 14 out of 15.</p>
+                        </main>
+                    </article>
+                    <article class="col-span-2">
+                        <img src="images/itym.png" alt="dummy"/>
+                        <main>
+                            <h3>ITYM 2019</h3>
+                            <p>I have been selected to be part of KVIS Thai team in the 
+                                International Tournaments of Young Mathematicians (ITYM) 2019 in Barcelona, Spain.
+                                I got honorable mention awards with my team. </p>
+                        </main>
+                    </article>
+                    <article class="col-span-2">
+                        <img src="images/kvis-isf.png" alt="dummy"/>
+                        <main>
+                            <h3>4th KVIS ISF</h3>
+                            <p>During KVIS, I had 3 years to develop and create a Math or Science project 
+                                as a graduation requirement in Grade 12. I won Best of Social Inspiration Awards 
+                                in Environmental Science field. </p>
+                        </main>
+                    </article>
+                    <article class="col-span-2">
+                        <img src="images/cansat.png" alt="dummy"/>
+                        <main>
+                            <h3>CANSAT 2019</h3>
+                            <p>During Grade 10, I have an opportunity to join CANSAT Thailand 
+                                which is a small satellites built in can-sized bottle. I made to the final round 
+                                and became one of the ten finalists. </p>
+                        </main>
+                    </article>
                 </div>
             </article>
             <article id="contact-me" class="standard-section">
